// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-30 {
  color: #3722ed !important;
}

<div
  class="emotion-28 emotion-1 emotion-30 test fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-i73oke"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-g4ok5l"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-g9b1pn"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-ijqj9o"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Divider.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-kfn643"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-5g5u89"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-qr5556"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-j3p1ko"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Group.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-f28n5u"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-389eou"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-n496od"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-6dj5i6"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.Item.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-9hff97"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-9bu6bp"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-prt9va"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-jvi8dk"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`overrides Menu.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-28 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-j1rgpr"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-c3lao5"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-rp8qvj"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-h76tjm"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-jnl23i"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-6jc9gf"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-8nfcaq"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-6sjm5c"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-30 {
  background-color: red !important;
}

<div
  class="emotion-28 emotion-1 emotion-30 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-573mj5"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-ojk3ck"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-gb53ae"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-d08u5e"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly for an invisible dropdown menu 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-1mffld"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-u5cuc3"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-nc6vs2"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-t9quh8"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`props should render correctly with groups 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-m4od3m"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-qi25dr"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-un3095"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-0g3k4d"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Divider.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-4qqfca"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-519teg"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-m42ut9"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-sra2kj"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Group.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-f1uvr1"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-b6q4cj"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-2f812s"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-je3t3j"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.Item.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-4 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-egmf4b"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-99q09t"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-pbs5fk"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-ghd9ft"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;

exports[`theming Menu.css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-4 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-4:hover {
  color: unset;
  fill: unset;
}

.emotion-4[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-4:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-4:not(:disabled):focus:active,
.emotion-4:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-3 {
  margin-right: 0.5rem;
}

.emotion-0 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-27 {
  color: #bb2a1a !important;
}

.emotion-28 {
  padding: 0.5rem 0;
  width: 100%;
}

.emotion-28 {
  background-color: red;
}

<div
  class="emotion-28 emotion-1 emotion-2 fp-Box fp-Menu"
  role="menu"
>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-45hdgl"
    role="menuitem"
    tabindex="0"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Edit
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-h2c8fp"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Share
  </div>
  <div
    class="emotion-4 emotion-1 emotion-2 fp-Box fp-MenuItem"
    id="id-juplap"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Rename
  </div>
  <div
    class="emotion-4 emotion-1 emotion-27 fp-Box fp-MenuItem"
    id="id-jm0f1p"
    role="menuitem"
    tabindex="-1"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-MenuItemIcon fp-Box fp-Icon"
      role="img"
      viewBox="0 0 0 0"
    />
    Delete
  </div>
</div>
`;
